# dysarthria-asr

./: .gitignore  LICENSE  PLAN.md  README.md
.github/workflows/: docker-images.yml
app/: .dockerignore  Dockerfile  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
app/app/: app.vue
app/app/assets/css/: main.css
app/app/components/: CategoryGrid.vue  MatchedPhrase.vue  MathResult.vue  PhraseGrid.vue  RecordControl.vue  ResultActions.vue  SpeakerHeader.vue  SuggestionList.vue  VoiceCommandControl.vue
app/app/composables/: usePhrases.ts  useSilenceDetection.ts  useSpeechSession.ts  useVoiceCommands.ts
app/app/pages/: index.vue  labeling.vue
app/app/pages/phrases/: [category].vue  index.vue
app/app/types/: speech.ts
app/server/api/: [...path].ts
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/seed/: phrases.csv
backend/src/: app.py  audio_samples.py  candidates.py  corpus.py  corrections.py  database.py  math_normalizer.py  paths.py  phrases.py  semantic_matching.py  speech_attempts.py  text.py
backend/src/routers/: corrections.py  labeling.py  phrases.py  speech_attempts.py  transcription.py
backend/static/: app.js  index.html  styles.css
backend/tests/: conftest.py  test_candidates.py  test_grammar.py  test_labeling.py  test_math_normalizer.py  test_semantic_matching.py  test_transcription.py
data/: phrases.csv
docs/: dynamic-phrases.md
src/: app.py  asr.py
static/: app.js  index.html  styles.css
