[project]
name = "dysarthria-asr-backend"
version = "0.1.0"
description = "Local FastAPI backend for dysarthria ASR experiments"
requires-python = ">=3.14"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "faster-whisper",
  "text2num>=3.0.2",
  "sentence-transformers>=5.0.0",
]

[tool.uv]
package = false
