[project]
name = "dysarthria-asr-backend"
version = "0.1.0"
description = "Local FastAPI backend for dysarthria ASR experiments"
requires-python = ">=3.14"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "faster-whisper",
  "huggingface-hub",
  "numpy",
  "onnxruntime",
  "text2num>=3.0.2",
  "tokenizers",
]

[dependency-groups]
dev = [
  "pytest",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
